--- a/oop.html
+++ b/oop.html
@@ -58,21 +58,22 @@
             <div class="col-12 mt-2 row">
                 <div class="col-4">
                     <p>Điểm toán</p>
-                    <input class="form-control" id="diemToan">
+                    <input type="number" class="form-control" id="diemToan">
                     <p id="error_diemToan" class="text text-danger"></p>
-                    <p class="text text-danger mix_max_toan"></p>
+                    <p class="text text-danger min_max_toan "></p>
+
                 </div>
                 <div class="col-4">
                     <p>Điểm lý</p>
-                    <input class="form-control" id="diemLy">
+                    <input type="number" class="form-control" id="diemLy">
                     <p id="error_diemLy" class="text text-danger"></p>
-                    <p class="text text-danger mix_max_ly"></p>
+                    <p class="text text-danger min_max_ly"></p>
                 </div>
                 <div class="col-4">
                     <p>Điểm hóa</p>
-                    <input class="form-control" id="diemHoa">
+                    <input type="number" class="form-control" id="diemHoa">
                     <p id="error_diemHoa" class="text text-danger"></p>
-                    <p class="text text-danger mix_max_hoa"></p>
+                    <p class="text text-danger min_max_hoa"></p>
                 </div>
             </div>
             <div class="col-12 mt-2">
